--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
 
-<div class="row" style="height: 100vh;">
+<div class="row m-1" style="height: 100vh;">
     <div class="col-8 d-flex justify-content-center align-items-center" id="videoContainer">
         <section id="videoSection">
             <span id="loadingMessage">Loading videos, please wait...</span>
@@ -75,7 +75,6 @@
 
 
 <script defer src="../static/app.js"></script>
-<script src="../static/survey.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
